# acc-cosc-1337-fall-2020-artgonzalezacc-1

./: README.md
src/classwork/: CMakeLists.txt
src/classwork/01_assign/: main.cpp  types.cpp  types.h
src/classwork/02_assign/: CMakeLists.txt  expressions.cpp  expressions.h  main.cpp
src/classwork/03_assign/: CMakeLists.txt  main.cpp
src/classwork/04_assign/: CMakeLists.txt  main.cpp
src/classwork/05_assign/: CMakeLists.txt
src/classwork/06_assign/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt
src/examples/05_module/: CMakeLists.txt  payroll.cpp  payroll.h
src/homework/: CMakeLists.txt
test/classwork_test/: CMakeLists.txt
test/examples_test/: CMakeLists.txt
test/examples_test/01_module_test/: 01_module_tests.cpp  CMakeLists.txt
test/examples_test/02_module_test/: 02_module_tests.cpp  CMakeLists.txt
test/examples_test/03_module_test/: 03_module_tests.cpp  CMakeLists.txt
test/examples_test/04_module_test/: 04_module_tests.cpp  CMakeLists.txt
test/examples_test/05_module_test/: CMakeLists.txt
test/examples_test/06_module_test/: 06_module_tests.cpp  CMakeLists.txt
test/examples_test/07_module_test/: CMakeLists.txt
test/examples_test/08_module_test/: CMakeLists.txt
test/examples_test/09_module_test/: 09_module_tests.cpp  CMakeLists.txt
test/examples_test/10_module_test/: 10_module_tests.cpp  CMakeLists.txt
test/examples_test/11_module_test/: CMakeLists.txt
test/examples_test/12_module_test/: CMakeLists.txt
test/examples_test/13_module_test/: CMakeLists.txt
test/homework_test/: CMakeLists.txt
(+152 files in other folders)
